--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <li><a href="#projects">Contact</a></li>
     </ul>
     <img src="./assets/placeholder-logo.png" alt="placeholder-logo">
-    <h1>Your headline here</h1>
-    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, ea?</h2>
-    <h2>This is Second Headline, Continues to Two Lines</h2>
-    <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic, iure.</h3>
+    <h1>Your headline <br> here</h1>
+    <h2>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Quisquam, ea?</h2>
+    <h2>This is Section Headline, <br> Continues to Two Lines</h2>
+    <h3>Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Hic, iure.</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, nesciunt quam error iste ipsam repellendus dignissimos asperiores, aliquid dolorem, officia minus. Molestiae quo accusantium inventore placeat sequi consequuntur quod assumenda neque facilis nobis, modi rem officiis voluptatem ut a quae aut voluptas eos ducimus officia veniam deserunt obcaecati temporibus. Quaerat!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, corporis tempore? Ipsum autem esse exercitationem est voluptas ab dicta eum?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam necessitatibus itaque officiis? Aspernatur enim harum et nulla fugit provident atque reiciendis, ut totam nam nemo quisquam debitis, iure magnam doloremque quia, corrupti non illo dicta dignissimos? Quidem autem minima doloremque, id rem quam labore molestiae, temporibus natus commodi, vel similique!</p>
     <button>Read more</button>
-    <h2>Learn more about our culture</h2>
+    <h2>Learn more <br> about our culture</h2>
     <button>&#9654;</button>
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero eius alias impedit commodi suscipit esse, sit inventore excepturi quae odio?</h3>
+    <h3>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Vero eius alias impedit commodi  <br> suscipit esse, sit inventore excepturi quae odio?</h3>
 
     <i>
         <div>
